--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "clipboardy": "^1.1.4",
     "eslint": "^4.10.0",
+    "ora": "^1.3.0",
     "osa-imessage": "briangonzalez/osa-imessage#2.3.0"
   },
   "devDependencies": {
